--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Obrigado por liderar conosco!!"
     />
     <link rel="stylesheet" href="App.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -30,7 +30,7 @@
     <title>Líder Fast Courier</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>You need to enable JavaScript to run this app, this is a production of VCK Digital, who runs this company ads too.</noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
